# 10-herencia-polim-salario-herencia_s_osorio

proyecto/: CMakeLists.txt  Empleado.cpp  Empleado.h  Junior.cpp  Junior.h  LiderTecnico.cpp  LiderTecnico.h  Senior.cpp  Senior.h  Sistema.cpp  Sistema.h  Tester.cpp  Tester.h  main.cpp
